# servers-connect

./: .gitignore  AGENTS.md  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: pages.yml  publish.yml  test.yml
ssh-server-manager/: CHANGELOG.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
ssh-server-manager/agents/: openai.yaml
ssh-server-manager/docs/: ai-agents.md  cli.md  faq.md  installation.md  platforms.md  quickstart.md  roadmap.md  security.md  ui-ux-research.md  web-ui.md
ssh-server-manager/references/: commands.md  data-model.md  security.md  troubleshooting.md
ssh-server-manager/scripts/: askpass.py  bootstrap  bootstrap.cmd  bootstrap.py  build-ui  serverctl  serverctl.cmd  serverctl.py
ssh-server-manager/scripts/ssh_server_manager/: __init__.py  askpass.py  auth.py  cli.py  db.py  importer.py  paths.py  service.py  ssh_config.py  ssh_runner.py  validation.py  vault.py  webapp.py
ssh-server-manager/scripts/ssh_server_manager/assets/ui/: app.js  contexts.css  contexts.js  diagnostics.css  diagnostics.js  index.html  notes.css  notes.js  skills.css  skills.js  styles.css  themes.css
ssh-server-manager/tests/: conftest.py  test_askpass.py  test_auth.py  test_cli.py  test_db.py  test_importer.py  test_runner.py  test_service.py  test_ssh_config.py  test_ui_assets.py  test_webapp.py  test_website.py
website/: index.html
