[project]
name = "ssh-server-manager"
version = "0.5.0"
description = "Local-first SSH host and credential manager for humans and AI agents — OS-keychain vault, loopback web UI, agent-safe by design"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ssh", "credentials", "keychain", "keyring", "agent-skill", "devops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Systems Administration",
  "Topic :: Security",
]

dependencies = [
  "argon2-cffi>=23.1",
  "fastapi>=0.115",
  "keyring>=25.0",
  "platformdirs>=4.0",
  "uvicorn>=0.34",
  "webauthn>=2.2",
]

[project.urls]
Homepage = "https://xiayh0107.github.io/servers-connect/"
Repository = "https://github.com/xiayh0107/servers-connect"
Documentation = "https://github.com/xiayh0107/servers-connect/tree/main/ssh-server-manager/docs"
Changelog = "https://github.com/xiayh0107/servers-connect/blob/main/ssh-server-manager/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
serverctl = "ssh_server_manager.cli:main"
ssh-server-manager-askpass = "ssh_server_manager.askpass:main"

[tool.setuptools]
package-dir = {"" = "scripts"}
packages = ["ssh_server_manager"]

[tool.setuptools.package-data]
ssh_server_manager = ["assets/ui/*"]

[project.optional-dependencies]
test = ["httpx>=0.28", "pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
